# idn

./: .gitignore  CMakeLists.txt  and_idn.vcxproj  and_idn.vcxproj.filters  config.h  config.h.in  config.h.inc  deployment.rc  idn.cbp  idn.sln  idn.vcxproj  idn.vcxproj.filters  m_idn.vcxproj  nord_idn.vcxproj  nord_idn.vcxproj.filters  w_idn.vcxproj
__idn/: __idn.h
__idn/__idn.docc/: __idn.md
__target/: __target.h
idn.xcodeproj/: project.pbxproj
idn.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
idn.xcodeproj/xcuserdata/production.xcuserdatad/xcschemes/: xcschememanagement.plist
idn.xcodeproj/xcuserdata/riteshpatel.xcuserdatad/xcschemes/: xcschememanagement.plist
lib/: idn-free.c  idna.c  pr29.c  profiles.c  punycode.c  punycode.h  rfc3454.c  strerror-idna.c  strerror-pr29.c  strerror-punycode.c  strerror-stringprep.c  strerror-tld.c  stringprep.h  tld.c  toutf8.c
lib/gl/: c-ctype.h  stdbool.in.h  striconv.c  string.in.h  unistr.in.h
